# Lumen-orange

./: .gitignore  ARCHITECTURE.md  DEMO.md  README.md  SECURITY.md
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/escrow-vault/: Cargo.toml
contracts/escrow-vault/src/: errors.rs  events.rs  lib.rs  milestone.rs  storage.rs
contracts/escrow-vault/test_snapshots/tests/: test_attack_confirm_after_deadline.1.json  test_attack_double_refund.1.json  test_attack_early_refund.1.json  test_attack_invalid_dispute_winner.1.json  test_attack_unauthorized_dispute_resolution.1.json  test_dispute_and_arbiter_resolution_buyer_wins.1.json  test_dispute_and_arbiter_resolution_seller_wins.1.json  test_full_mutual_confirm_release.1.json  test_milestone_partial_release.1.json  test_timeout_refund.1.json
contracts/marketplace-registry/: Cargo.toml
contracts/marketplace-registry/src/: errors.rs  events.rs  lib.rs  storage.rs
contracts/marketplace-registry/test_snapshots/tests/: test_active_listings_index.1.json  test_attack_unauthorized_update_listing_status.1.json  test_create_and_get_listing.1.json  test_double_initialize.1.json  test_invalid_milestone_config_sum.1.json  test_valid_milestone_config.1.json
contracts/shared-types/: Cargo.toml
contracts/shared-types/src/: lib.rs
frontend/: Animatedbackground.tsx  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: Floatingshapes.tsx  error.tsx  footer.css  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/activity/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/components/: CreateListingForm.tsx  EscrowPanel.tsx
frontend/app/components/layout/: Navbar.tsx
frontend/app/components/ui/: EmptyState.tsx  ErrorState.tsx  SealIcon.tsx  Skeleton.tsx  StatusBadge.tsx  ToastContainer.tsx
frontend/app/dashboard/: page.tsx
frontend/app/hooks/: useListings.ts  useWallet.ts
frontend/app/marketplace/: page.tsx
frontend/app/marketplace/[id]/: page.tsx
frontend/app/providers/: QueryClientProvider.tsx
frontend/app/services/: contract.ts  events.ts  observability.ts  stellar.ts
frontend/app/settings/: page.tsx
frontend/app/state/: escrowStore.ts  nanoid.ts  toastStore.ts  txStore.ts  walletStore.ts
frontend/app/transactions/: page.tsx
frontend/app/types/: index.ts
frontend/tests/: setup.ts
frontend/tests/integration/: escrow-flow.test.ts
frontend/tests/unit/: app.test.tsx
scripts/: deploy-local.sh  deploy-testnet.sh  upgrade.sh
