[package]
name = "lumenlock-escrow-vault"
version = "0.1.1"
edition = "2021"
publish = false
authors = ["dev-rps"]
description = "Escrow vault smart contract for the LumenLock marketplace."
repository = "https://github.com/dev-rps/lumenlock"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
testutils = [
    "soroban-sdk/testutils",
    "lumenlock-shared-types/testutils",
    "lumenlock-marketplace-registry/testutils",
]

[dependencies]
soroban-sdk = { workspace = true }
lumenlock-shared-types = { path = "../shared-types" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
lumenlock-shared-types = { path = "../shared-types", features = ["testutils"] }
lumenlock-marketplace-registry = { path = "../marketplace-registry", features = ["testutils"] }
