[package]
name = "lumenlock-marketplace-registry"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["dev-rps"]
repository = "https://github.com/dev-rps/lumenlock"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils", "lumenlock-shared-types/testutils"]

[dependencies]
soroban-sdk = { workspace = true }
lumenlock-shared-types = { path = "../shared-types" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
lumenlock-shared-types = { path = "../shared-types", features = ["testutils"] }
